# zazu-python

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: fetch_cassettes.py
src/zazu_sdk/: __init__.py  client.py  errors.py  page.py  response.py
src/zazu_sdk/resources/: accounts.py  base.py  beneficiaries.py  checkout_sessions.py  customers.py  entity.py  invoices.py  payment_links.py  transfer_drafts.py  webhook_endpoints.py
tests/: cassette_replay.py  conftest.py  fixture_ids.py  test_client.py  test_page.py
tests/resources/: test_accounts.py  test_beneficiaries.py  test_checkout_sessions.py  test_customers.py  test_entity.py  test_invoices.py  test_payment_links.py  test_transfer_drafts.py  test_webhook_endpoints.py
